fixed text overflow on about us section

--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ a:hover{
     background: url('../img/WEB-BANNER-updated.png') center no-repeat;
     width: 100%;
     height: 630px;
+    background-size: cover;
     display: -webkit-flex;
     justify-content: center;
     align-items: center;
